--- a/react-microfrontend-communication-event/apps/k8s/product-catalog-deployment.yaml
+++ b/react-microfrontend-communication-event/apps/k8s/product-catalog-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: product-catalog
-        image: gcr.io/<PROJECT_ID>/product-catalog:latest
+        image: gcr.io/eighth-codex-439113-s2/product-catalog:latest
         ports:
         - containerPort: 80
