--- a/react-microfrontend-communication-event/apps/container-app/Dockerfile
+++ b/react-microfrontend-communication-event/apps/container-app/Dockerfile
@@ -9,6 +9,8 @@ COPY package.json package-lock.json ./
 
 # Install dependencies
 RUN npm install
+# Install Webpack CLI globally
+RUN npm install -g webpack webpack-cli
 
 # Copy the rest of the application code to the working directory
 COPY . .
