--- a/react-microfrontend-communication-event/apps/k8s/container-app-deployment.yaml
+++ b/react-microfrontend-communication-event/apps/k8s/container-app-deployment.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: product-catalog
+  name: container-app
   namespace: sumanns
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: product-catalog
+      app: container-app
   template:
     metadata:
       labels:
-        app: product-catalog
+        app: container-app
     spec:
       containers:
-        - name: product-catalog
-          image: gcr.io/eighth-codex-439113-s2/product-catalog:latest
+        - name: container-app
+          image: gcr.io/eighth-codex-439113-s2/container-app:latest
           ports:
-            - containerPort: 3000  # Same as the exposed port in the Dockerfile
+            - containerPort: 3003  # Same as the exposed port in the Dockerfile
           readinessProbe:
             httpGet:
               path: /ready  # Ensure your app has this health endpoint
-              port: 3000     # Probe using the correct port
+              port: 3003     # Probe using the correct port
             initialDelaySeconds: 10  # Wait before the first probe
             periodSeconds: 10        # Frequency of probes
           livenessProbe:
             httpGet:
               path: /health  # Same endpoint for liveness check
-              port: 3000
+              port: 3003
             initialDelaySeconds: 30  # Delay for the first liveness check
             periodSeconds: 10        # Frequency of checks
