--- a/react-microfrontend-communication-event/apps/k8s/gateway.yaml
+++ b/react-microfrontend-communication-event/apps/k8s/gateway.yaml
@@ -1,28 +1,12 @@
-apiVersion: gateway.networking.k8s.io/v1beta1
 kind: Gateway
+apiVersion: gateway.networking.k8s.io/v1beta1
 metadata:
   name: microfrontends-gateway
-  namespace: sumanns
   annotations:
-    networking.gke.io/static-ip: "35.225.249.245"  # Ensure this IP is reserved in GCP
+    networking.gke.io/certmap: sumang-codes-map-two
 spec:
-  gatewayClassName: gke-l7-global-external-managed  # Ensure this GatewayClass exists
+  gatewayClassName: gke-l7-global-external-managed
   listeners:
-    - name: http
-      protocol: HTTP
-      port: 80
-      allowedRoutes:
-        namespaces:
-          from: All  # Allow routes from all namespaces
-      hostname: "*.sumangcodes.info"  # Wildcard for subdomains
-    - name: https
-      protocol: HTTPS
-      port: 443
-      tls:
-        mode: Terminate
-        certificateRefs:
-          - kind: Secret
-            name: sumangcodes-info-cert  # Secret with TLS certs
-      allowedRoutes:
-        namespaces:
-          from: All  # Allow HTTPS routes from all namespaces
+  - name: https
+    protocol: HTTPS
+    port: 443
